<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment"
    android:background="@color/background_material_light">

    <TextView
        android:id="@+id/header_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/my_nanodegree_apps"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:fontFamily="@string/abc_action_bar_home_subtitle_description_format"
        android:textSize="@dimen/abc_text_size_medium_material" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_below="@id/header_textView">

        <Button
            android:id="@+id/spotify_streamer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/spotify_streamer"
            android:background="@android:color/holo_orange_dark"/>

            <!--style="?android:attr/buttonBarButtonStyle"-->

        <Button
            android:id="@+id/scores_app"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/scores_app"
            android:background="@android:color/holo_orange_dark"/>

        <Button
            android:id="@+id/library_app"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/library_app"
            android:background="@android:color/holo_orange_dark"/>


        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/build_it_bigger"
            android:background="@android:color/holo_orange_dark"/>

        <Button
            android:id="@+id/bacon_reader"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/bacon_reader"
            android:background="@android:color/holo_orange_dark"/>

        <Button
            android:id="@+id/capstone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/capstone"
            android:background="@android:color/holo_red_dark"/>


    </LinearLayout>



</LinearLayout>
